compiler/testData/cli/jvm/diagnosticTests/requireKotlinCompilerVersion.out
compiler/testData/cli/jvm/diagnosticTests/requireKotlinCompilerVersion.kt:15:5: error: 'constructor(): Foo' is only available since Kotlin 9.9.90 and cannot be used in Kotlin $VERSION$.
    Foo()
    ^^^
COMPILATION_ERROR
