compiler/testData/cli/jvm/diagnosticTests/requireKotlinCompilerVersion.kt
// Library part (build separately)

//@file:Suppress("INVISIBLE_REFERENCE", "INVISIBLE_MEMBER")
//package test.access
//
//import kotlin.internal.RequireKotlin
//import kotlin.internal.RequireKotlinVersionKind
//
//@RequireKotlin("9.9.90", versionKind = RequireKotlinVersionKind.COMPILER_VERSION)
//class Foo

import test.access.Foo

fun main() {
    Foo()
}
